chore: add typescript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": 
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {}
 }
