--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "jest --passWithNoTests --no-cache --runInBand"
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "keywords": [],
   "author": "",
@@ -17,16 +20,23 @@
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "^7.20.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^5.0.9",
+    "identity-obj-proxy": "^3.0.0",
     "lint-staged": "^10.5.4",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "ts-jest": "^26.5.1",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.1.5",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
