--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^14.14.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4"
   }
 }
