--- a/package.json
+++ b/package.json
@@ -49,9 +49,13 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-router-dom": "^5.3.4"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^5.3.4",
+    "uuid": "^9.0.0"
   }
 }
